# gait_speed_ros2

./: CMakeLists.txt  README.md  package.xml  thirdparty.repos
bt_xml/: error.xml  explain.xml  explain_and_focus.xml  explain_old.xml  find_patient.xml  find_person.xml  find_person_old.xml  find_person_rot.xml  find_person_rot_nav.xml  find_person_simple.xml  find_person_simple_identify.xml  find_person_simple_nav.xml  just_explain.xml  just_measure_gait_speed.xml  just_measure_gait_speed2.xml  measure_dist.xml  measure_dist_pan.xml  measure_gait_speed copy.xml  measure_gait_speed.xml  measure_gait_speed_dist.xml  measure_gait_speed_mocap.xml  measure_gait_speed_nav_when_lost.xml  measure_gait_speed_no_hri.xml  measure_gait_speed_no_hri_identify.xml  measure_gait_speed_no_hri_mocap.xml  measure_gait_speed_no_hri_no_nav.xml  prepare.xml
bt_xml/examples/: listen.xml  nav_through.xml  repeat.xml
config/: params.yaml  params_sim.yaml
include/gait_speed_ros2/behaviors/: behavior_runner.hpp  explain.hpp  find_person.hpp  gait_speed_dist.hpp  measure_gait_speed_dist.hpp
include/gait_speed_ros2/bt_nodes/: CheckEndTest.hpp  DistanceReached.hpp  EndTest.hpp  HasPersonStarted.hpp  PublishCurrentInterestPose.hpp  StartTest.hpp  TargetReached.hpp  TargetReachedStatic.hpp  isMyPerson.hpp
include/gait_speed_ros2/orchestrators/: example.hpp  example2.hpp  gait_speed.hpp  gait_speed_dist.hpp  gait_speed_simple.hpp  gait_speed_states.hpp
include/gait_speed_ros2/orchestrators/examples/: example_nav.hpp  example_repeat.hpp
launch/: explain_and_focus.launch.py  gait_speed.launch.py  gait_speed_dist.launch.py  gait_speed_just_measure.py  gait_speed_simple.launch.py  mocap_gait_speed.launch.py  mocap_gait_speed_simple.launch.py  sim_gait_speed.launch.py  sim_gait_speed_simple.launch.py
src/: main_example.cpp  main_example2.cpp  main_gait_speed.cpp  main_gait_speed_dist.cpp  main_gait_speed_mocap.cpp  main_gait_speed_simple.cpp  main_gait_speed_simple_mocap.cpp  sim_main_gait_speed.cpp
src/examples/: main_example_nav.cpp  main_example_repeat.cpp  main_explain_and_focus.cpp  main_just_explain.cpp  main_just_find.cpp  main_just_measure.cpp
src/gait_speed_ros2/behaviors/: behavior_runner.cpp  explain.cpp  find_person.cpp  gait_speed_dist.cpp  measure_gait_speed_dist.cpp
src/gait_speed_ros2/bt_nodes/: CheckEndTest.cpp  DistanceReached.cpp  EndTest.cpp  HasPersonStarted.cpp  PublishCurrentInterestPose.cpp  StartTest.cpp  StartTestMocap.cpp  StartTest_old.cpp  TargetReached.cpp  TargetReachedStatic.cpp  isMyPerson.cpp
src/gait_speed_ros2/orchestrators/: example.cpp  example2.cpp  gait_speed.cpp  gait_speed_dist.cpp  gait_speed_simple.cpp
src/gait_speed_ros2/orchestrators/examples/: example_nav.cpp  example_repeat.cpp
