<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gait_speed_ros2</name>
  <version>0.0.1</version>
  <description>Gait speed calculation with a robot running ROS 2</description>
  <maintainer email="rodrigo.perez@urjc.es">rodperex</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_cascade_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>perception_system</depend>
  <depend>perception_system_interfaces</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>